feat: :sparkles: sticky table styling.

--- a/src/skewer/templates/base.html
+++ b/src/skewer/templates/base.html
@@ -10,6 +10,7 @@
     {% block styles %}
     <!-- Bootstrap CSS -->
     {{ bootstrap.load_css() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% endblock %}
 
     <title>{% block title %}Skewer{% endblock %}</title>
